# cml

./: .editorconfig  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: coveralls.yml  test.yml
cml-core/: Cargo.toml
cml-core/src/: core.rs  handler.rs  lib.rs  metadata.rs
cml-core/src/core/: inference.rs  register.rs  task.rs  utils.rs
cml-tdengine/: Cargo.toml
cml-tdengine/src/: core.rs  lib.rs  models.rs
cml-tdengine/src/core/: inference.rs  register.rs  task.rs
cml-tdengine/src/models/: databases.rs  stables.rs
cml-tdengine/src/models/databases/: options.rs
