[workspace]
members = [
    "cml-core",
    "cml-tdengine",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
rand = "0.8.5"
dashmap = { version = "5.5.0", features = ["inline"] }
deadpool = { version = "0.10.0", default-features = false, features = ["managed"] }
chrono = "0.4.26"
burn = "0.9.0"
serde = { version = "1.0.163", features = ["derive"] }
typed-builder = "0.16.2"
