[package]
name = "cml-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
derive-getters = "0.2.1"
derive_builder = { workspace = true }
deadpool = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
