[package]
name = "cml-tdengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cml-core = { path = "../cml-core" }

taos = { git = "https://github.com/bioinformatist/taos-connector-rust.git", branch = "fix/fix_memory_problem", version = "*", default-features = false, features = [
  "native",
] }
taos-sys = { version = "*" }
taos-query = { version = "*" }
anyhow = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
typed-builder = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rayon = "1.7.0"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
burn = { workspace = true }
burn-autodiff = "0.9.0"
burn-ndarray = "0.9.0"
tempfile = "3.8.0"
